[package]
name = "solana-poh"
version = "1.8.14"
description = "Solana PoH"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-poh"
edition = "2018"

[dependencies]
core_affinity = "0.5.10"
crossbeam-channel = "0.4"
log = "0.4.11"
solana-ledger = { git = "https://github.com/solindex/ledger.git", version = "=1.8.14" }
solana-measure = { git = "https://github.com/solindex/measure.git", version = "=1.8.14" }
solana-metrics = { git = "https://github.com/solindex/metrics.git", version = "=1.8.14" }
solana-runtime = { git = "https://github.com/solindex/runtime.git", version = "=1.8.14" }
solana-sdk = { git = "https://github.com/solindex/sdk.git", version = "=1.8.14" }
solana-sys-tuner = { git = "https://github.com/solindex/sys-tuner.git", version = "=1.8.14" }
thiserror = "1.0"

[dev-dependencies]
bincode = "1.3.1"
matches = "0.1.6"
rand = "0.7.0"
solana-logger = { git = "https://github.com/solindex/logger.git", version = "=1.8.14" }
solana-perf = { git = "https://github.com/solindex/perf.git", version = "=1.8.14" }

[lib]
crate-type = ["lib"]
name = "solana_poh"

[[bench]]
name = "poh"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
